# EmojiLookup

./: .gitignore  README.md  pyproject.toml
src/emojilookup/: __init__.py  emojilookup.py
