[project]
name = "emojilookup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kappa54", email = "z3xcvv@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fasttext",
]

[project.scripts]
emojilookup = "emojilookup:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
fasttext = { git = "https://github.com/facebookresearch/fastText.git" }
